[PoC] Custom background for empty space ( It could be reverted if its needed )

--- a/smw.ini
+++ b/smw.ini
@@ -23,6 +23,9 @@ WindowScale = 3
 # Use an optimized (but potentially more buggy) SNES PPU implementation
 NewRenderer = 1
 
+# Draw an animated star background
+Background = 0
+
 # Don't keep the aspect ratio
 IgnoreAspectRatio = 0
 
@@ -93,4 +96,3 @@ ReplayRef = Ctrl+1,Ctrl+2,Ctrl+3,Ctrl+4,Ctrl+5,Ctrl+6,Ctrl+7,Ctrl+8,Ctrl+9,Ctrl+
 # Any keys used in KeyMap can be used also in this section.
 # The shoulder button is called L1/Lb and L2, and the thumbstick button is called L3
 Controls = DpadUp, DpadDown, DpadLeft, DpadRight, Back, Start, B, A, Y, X, Lb, Rb
-
