--- a/src/platform/switch/smw.ini
+++ b/src/platform/switch/smw.ini
@@ -23,8 +23,11 @@ WindowScale = 1
 # Use an optimized (but potentially more buggy) SNES PPU implementation
 NewRenderer = 1
 
+# Draw an animated star background
+Background = 1
+
 # Don't keep the aspect ratio
-IgnoreAspectRatio = 1
+IgnoreAspectRatio = 0
 
 # Enable this option to remove the sprite limits per scan line
 NoSpriteLimits = 1
