Added image background

--- a/smw.ini
+++ b/smw.ini
@@ -23,8 +23,8 @@ WindowScale = 3
 # Use an optimized (but potentially more buggy) SNES PPU implementation
 NewRenderer = 1
 
-# Draw an animated star background
-Background = 0
+# Draw an animated star background ( it could be stars or a png file )
+# Background = stars
 
 # Don't keep the aspect ratio
 IgnoreAspectRatio = 0
