--- a/src/smw.vcxproj
+++ b/src/smw.vcxproj
@@ -211,7 +211,7 @@
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">MinSpace</Optimization>
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">MinSpace</Optimization>
     </ClCompile>
-    <ClCompile Include="spc_player.c" />
+    <ClCompile Include="smw_spc_player.c" />
     <ClCompile Include="tracing.c" />
     <ClCompile Include="util.c" />
   </ItemGroup>
@@ -244,7 +244,7 @@
     <ClInclude Include="snes\snes.h" />
     <ClInclude Include="snes\snes_regs.h" />
     <ClInclude Include="snes\spc.h" />
-    <ClInclude Include="spc_player.h" />
+    <ClInclude Include="smw_spc_player.h" />
     <ClInclude Include="tracing.h" />
     <ClInclude Include="types.h" />
     <ClInclude Include="util.h" />
