--- a/src/smw.vcxproj.filters
+++ b/src/smw.vcxproj.filters
@@ -154,6 +154,9 @@
     <ClCompile Include="..\smbll\smbll_cpu_infra.c">
       <Filter>Smb Lost Levels</Filter>
     </ClCompile>
+    <ClCompile Include="..\smb1\smb1_spc_player.c">
+      <Filter>Smb1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="funcs.h">
