Basic support for Lunar Magic edited roms.
Mods that use ASM hooks will not work except for wall jump.

You might have to edit the ROM with the latest lunar magic (3.33) and
edit a level and save it, and edit a map16 tile and save it, just to
make sure Lunar Magic upgrades the code in the ROM to the latest version.

Run the asset tool like:
python3 assets/restool.py -f -r "enhanced/enhanced.sfc"

--- a/src/smw.vcxproj
+++ b/src/smw.vcxproj
@@ -38,7 +38,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -164,6 +164,7 @@
     <ClCompile Include="common_rtl.c" />
     <ClCompile Include="config.c" />
     <ClCompile Include="glsl_shader.c" />
+    <ClCompile Include="lm.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="opengl.c" />
     <ClCompile Include="platform\win32\volume_control.c" />
