--- a/src/smw.vcxproj.filters
+++ b/src/smw.vcxproj.filters
@@ -10,9 +10,6 @@
     <Filter Include="Common\Shader">
       <UniqueIdentifier>{2b72ed96-9194-4c2c-b1e5-15445f0a9550}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Common\Snes">
-      <UniqueIdentifier>{e1763dbc-4fb3-417f-ad1a-8436411c3b7a}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Smw">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
@@ -20,43 +17,46 @@
     <Filter Include="Smb Lost Levels">
       <UniqueIdentifier>{c20be95b-4f11-4834-a006-bfb273e4bc0b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Snes">
+      <UniqueIdentifier>{e1763dbc-4fb3-417f-ad1a-8436411c3b7a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="smw_spc_player.c">
       <Filter>Smw</Filter>
     </ClCompile>
     <ClCompile Include="snes\apu.c">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClCompile>
     <ClCompile Include="snes\cart.c">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClCompile>
     <ClCompile Include="snes\cpu.c">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClCompile>
     <ClCompile Include="snes\dma.c">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClCompile>
     <ClCompile Include="snes\dsp.c">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClCompile>
     <ClCompile Include="snes\input.c">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClCompile>
     <ClCompile Include="snes\ppu.c">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClCompile>
     <ClCompile Include="snes\snes.c">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClCompile>
     <ClCompile Include="snes\snes_other.c">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClCompile>
     <ClCompile Include="snes\spc.c">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClCompile>
     <ClCompile Include="tracing.c">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClCompile>
     <ClCompile Include="glsl_shader.c">
       <Filter>Common\Shader</Filter>
@@ -101,7 +101,7 @@
       <Filter>Smw</Filter>
     </ClCompile>
     <ClCompile Include="snes\ppu_old.c">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClCompile>
     <ClCompile Include="..\smb1\smb1_00.c">
       <Filter>Smb1</Filter>
@@ -157,6 +157,9 @@
     <ClCompile Include="..\smb1\smb1_spc_player.c">
       <Filter>Smb1</Filter>
     </ClCompile>
+    <ClCompile Include="lm.c">
+      <Filter>Smw</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="funcs.h">
@@ -169,40 +172,40 @@
       <Filter>Smw</Filter>
     </ClInclude>
     <ClInclude Include="snes\apu.h">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClInclude>
     <ClInclude Include="snes\cart.h">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClInclude>
     <ClInclude Include="snes\cpu.h">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClInclude>
     <ClInclude Include="snes\dma.h">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClInclude>
     <ClInclude Include="snes\dsp.h">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClInclude>
     <ClInclude Include="snes\dsp_regs.h">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClInclude>
     <ClInclude Include="snes\input.h">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClInclude>
     <ClInclude Include="snes\ppu.h">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClInclude>
     <ClInclude Include="snes\snes.h">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClInclude>
     <ClInclude Include="snes\spc.h">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClInclude>
     <ClInclude Include="tracing.h">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClInclude>
     <ClInclude Include="snes\saveload.h">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClInclude>
     <ClInclude Include="glsl_shader.h">
       <Filter>Common\Shader</Filter>
@@ -211,7 +214,7 @@
       <Filter>Common\Shader</Filter>
     </ClInclude>
     <ClInclude Include="snes\snes_regs.h">
-      <Filter>Common\Snes</Filter>
+      <Filter>Snes</Filter>
     </ClInclude>
     <ClInclude Include="..\smb1\smb1_variables.h">
       <Filter>Smb1</Filter>
