--- a/smw.ini
+++ b/smw.ini
@@ -66,6 +66,9 @@ Controls = Up, Down, Left, Right, Right Shift, Return, x, z, s, a, c, v
 # This one is suitable for AZERTY keyboards.
 #Controls = Up, Down, Left, Right, Right Shift, Return, x, w, s, q, c, v
 
+# For player 2
+#ControlsP2 = Shift+Up, Shift+Down, Shift+Left, Shift+Right, Shift+Right Shift, Shift+Return, Shift+x, Shift+z, Shift+s, Shift+a, Shift+c, Shift+v
+
 CheatLife = w
 CheatJump = Ctrl+q
 ClearKeyLog = k
@@ -90,7 +93,14 @@ LoadRef = 1,2,3,4,5,6,7,8,9,0,-,=,Backspace
 ReplayRef = Ctrl+1,Ctrl+2,Ctrl+3,Ctrl+4,Ctrl+5,Ctrl+6,Ctrl+7,Ctrl+8,Ctrl+9,Ctrl+0,Ctrl+-,Ctrl+=,Ctrl+Backspace
 
 [GamepadMap]
-# Any keys used in KeyMap can be used also in this section.
-# The shoulder button is called L1/Lb and L2, and the thumbstick button is called L3
-Controls = DpadUp, DpadDown, DpadLeft, DpadRight, Back, Start, B, A, Y, X, Lb, Rb
+# Whether the gamepads will be enabled. The game will not use them unless they're on.
+EnableGamepad1 = true
+EnableGamepad2 = true
 
+# Any keys used in KeyMap can be used also in this section.
+
+# The shoulder button is called L1/Lb and L2, and the thumbstick button is called L3
+Controls =   DpadUp, DpadDown, DpadLeft, DpadRight, Back, Start, B, A, Y, X, Lb, Rb
+
+# For player 2.
+ControlsP2 = DpadUp, DpadDown, DpadLeft, DpadRight, Back, Start, B, A, Y, X, Lb, Rb
