--- a/smw.ini
+++ b/smw.ini
@@ -2,7 +2,7 @@
 # Automatically save state on quit and reload on start
 Autosave = 0
 
-# Disable the SDL_Delay that happens each frame (Gives slightly better perf if your
+# Disable the SDL_Delay that happens each frame (Gives slightly better performance if your
 # display is set to exactly 60hz)
 DisableFrameDelay = 0
 
@@ -30,7 +30,7 @@ IgnoreAspectRatio = 0
 NoSpriteLimits = 1
 
 # Use either SDL, SDL-Software, or OpenGL as the output method
-# SDL-Software rendering might give better performance on Raspberry pi.
+# SDL-Software rendering might give better performance on Raspberry Pi.
 #OutputMethod = SDL
 
 # Set to true to use linear filtering. Gives less crisp pixels. Works with SDL and OpenGL.
@@ -97,7 +97,7 @@ ReplayRef = Ctrl+1,Ctrl+2,Ctrl+3,Ctrl+4,Ctrl+5,Ctrl+6,Ctrl+7,Ctrl+8,Ctrl+9,Ctrl+
 EnableGamepad1 = true
 EnableGamepad2 = true
 
-# Any keys used in KeyMap can be used also in this section.
+# Any keys used in KeyMap can also be used in this section.
 
 # The shoulder button is called L1/Lb and L2, and the thumbstick button is called L3
 Controls =   DpadUp, DpadDown, DpadLeft, DpadRight, Back, Start, B, A, Y, X, Lb, Rb
