--- a/smw.ini
+++ b/smw.ini
@@ -2,8 +2,10 @@
 # Automatically save state on quit and reload on start
 Autosave = 0
 
-# Disable the SDL_Delay that happens each frame (Gives slightly better perf if your
-# display is set to exactly 60hz)
+# Disable the manual delaying without vsync that happens each frame. Instead,
+# rely on vsync to do frame timing. Results in frames never being dropped at
+# the cost of more lag, but be sure to set your display to 60hz when using
+# this.
 DisableFrameDelay = 0
 
 # Save a snapshot each time a level is completed
@@ -31,7 +33,19 @@ NoSpriteLimits = 1
 
 # Use either SDL, SDL-Software, or OpenGL as the output method
 # SDL-Software rendering might give better performance on Raspberry pi.
-#OutputMethod = SDL
+OutputMethod = SDL
+
+# The type of display sync to use, when vsync is not forced on ( Disabled, Vsync, or Adaptive )
+# Vsync is forced on when DisableFrameDelay is 1. Disabled and Vsync should
+# always work. Disabled produces less lag than Vsync, at the cost of possible
+# tearing. Adaptive sync is only supported when OutputMethod is OpenGL. If your
+# setup supports FreeSync or G-Sync, you'll get least-lag-no-tearing with frame
+# delay not disabled, adaptive sync, and OpenGL output method. Choosing
+# adaptive sync with OpenGL output method when your setup doesn't support
+# adaptive sync can result in using vsync instead.
+#DisplaySync = Disabled
+DisplaySync = Vsync
+#DisplaySync = Adaptive
 
 # Set to true to use linear filtering. Gives less crisp pixels. Works with SDL and OpenGL.
 #LinearFiltering = 0
